tests/errors/collection-len-method-shape.ari
fn main() -> i64 {
  let values = [1, 2, 3];
  return values.len(0);
}
